--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,14 @@
     visibility: hidden;
 }
 
-
-
+.st-emotion-cache-ocqkz7.e1f1d6gn5{
+    /*background-color: #534949;*/
+    border: 1px solid #dcdcdc;
+    padding: 20px 20px 20px 70px;
+    padding: 5% 5% 5% 10%;
+    border-radius: 15px;
+    text-align: left;
+}
 
 
 /*Números*/
