--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@
     visibility: hidden;
 }
 
+/*Borda st.metric*/
 .st-emotion-cache-ocqkz7.e1f1d6gn5{
     /*background-color: #534949;*/
     border: 1px solid #dcdcdc;
