--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,10 @@
     overflow: hidden;
 }
 
-
+.st-emotion-cache-ltfnpr{
+    background-color: transparent;
+    color: rgb(23, 248, 3);
+}
 
 
 /* Span = # (identificação não por tag)*/
