--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@
     overflow: hidden;
 }
 
+/*Label laboratório CEM (caption)*/
 .st-emotion-cache-ltfnpr{
     background-color: transparent;
     color: rgb(23, 248, 3);
