--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,8 @@ BOTÃO BROWSE FILLES*/
 
 
 /* Span = # (identificação não por tag)*/
+.stActionButton{
+    visibility: hidden;
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
 
