--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,8 @@ BOTÃO BROWSE FILLES*/
 
 
 /* Span = # (identificação não por tag)*/
-
+.st-emotion-cache-ch5dnh ef3psqc5{
+    visibility: hidden;
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
 
