--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ BOTÃO BROWSE FILLES*/
 
 
 /* Span = # (identificação não por tag)*/
-.st-emotion-cache-ch5dnh.ef3psqc5{
+.baseButton-header{
     visibility: hidden;
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
