--- a/styles.css
+++ b/styles.css
@@ -60,11 +60,13 @@ BOTÃO BROWSE FILLES*/
 }
 
 /*Label laboratório CEM (caption)*/
-
+.st-emotion-cache-ltfnpr{
+    background-color: transparent;
+    color: rgb(23, 248, 3);
+}
 
 /* Span = # (identificação não por tag)*/
-.baseButton-header{
-    visibility: hidden;
+
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
 
