--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,9 @@
     font-size: 35px;
 }
 
-/*CONATINER BOTÃO UPLOAD*/
-.st-emotion-cache-xwtqgq.e1b2p2ww15{
+/*CONATINER BOTÃO UPLOAD
+.st-emotion-cache-xwtqgq.e1b2p2ww15*/
+.st-emotion-cache-13ejsyy.ef3psqc12{
     background-color: rgb(52, 56, 61);
     border-radius: 10%;
     border-color: white;
