--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,8 @@
     font-size: 35px;
 }
 
-/*CONATINER BOTÃO UPLOAD
-.st-emotion-cache-xwtqgq.e1b2p2ww15*/
-.st-emotion-cache-13ejsyy.ef3psqc12{
+/*CONATINER BOTÃO UPLOAD*/
+.st-emotion-cache-xwtqgq.e1b2p2ww15{
     background-color: rgb(52, 56, 61);
     border-radius: 10%;
     border-color: white;
@@ -33,8 +32,9 @@
 
 
 /*https://uiverse.io/gharsh11032000/neat-bullfrog-61
-BOTÃO BROWSE FILLES*/
-.st-emotion-cache-hc3laj{
+BOTÃO BROWSE FILLES
+.st-emotion-cache-hc3laj*/
+.st-emotion-cache-13ejsyy.ef3psqc12{
     position: relative;
     display: inline-block;
     padding: 12px 24px;
@@ -51,8 +51,9 @@ BOTÃO BROWSE FILLES*/
 }
 
 
-/*BOTÃO BROWSE FILLES no intervalo em que o mause fica em cima*/
-.st-emotion-cache-hc3laj:hover{
+/*BOTÃO BROWSE FILLES no intervalo em que o mause fica em cima
+.st-emotion-cache-hc3laj*/
+.st-emotion-cache-13ejsyy.ef3psqc12:hover{
     box-shadow: 0 0 0 5px #cc00ff60;
     color: #ffffff;
     transform: translate3d(5px, 35px, 0px) perspective(95px) rotateY(-10deg) translateY(-10px);
