--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,8 @@
 
 
 /*https://uiverse.io/gharsh11032000/neat-bullfrog-61
-BOTÃO BROWSE FILLES
-.st-emotion-cache-hc3laj*/
-.st-emotion-cache-13ejsyy.ef3psqc12{
+BOTÃO BROWSE FILLES*/
+.st-emotion-cache-hc3laj{
     position: relative;
     display: inline-block;
     padding: 12px 24px;
