--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,9 @@
 
 
 /*https://uiverse.io/gharsh11032000/neat-bullfrog-61
-BOTÃO BROWSE FILLES*/
-.st-emotion-cache-hc3laj{
+BOTÃO BROWSE FILLES
+.st-emotion-cache-hc3laj*/
+.st-emotion-cache-13ejsyy{
     position: relative;
     display: inline-block;
     padding: 12px 24px;
