--- a/styles3.css
+++ b/styles3.css
@@ -103,14 +103,14 @@
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
 
-/*#MainMenu{
+#MainMenu{
     visibility: hidden;
-}*/
+}
 
 
-/* .stDeployButton{ 
+.stDeployButton{ 
     visibility: hidden;
-}*/
+}
 
 
 
