--- a/styles3.css
+++ b/styles3.css
@@ -103,9 +103,9 @@
 
 /* BOTAO DE RECARREGAR A PAGINA ESCONDIDO AQUI*/
 
-#MainMenu{
+/* #MainMenu{
     visibility: hidden;
-}
+} */
 
 
 .stDeployButton{ 
